# Classification

./: ASSEMBLE.hs  AdaBoost.hs  Classification.hs  DecisionStump.hs  Ensemble.hs  HMine.cabal  Haberman.hs  NaiveBayes.hs  NaiveBayes.old.hs  README  SSLTest.hs  beeradvocate.hs
src/: CodeCheck.hs  DataFilter.hs  Haberman.hs  Histogram.hs  Performance.hs  Plots.hs  SSLTest.hs  ToyLibrary.hs  ToyProblem.hs  gnuplot-demo.hs
src/AI/: ASSEMBLE.hs  Boosting.hs  Classification.hs  DataLoader.hs  Ensemble.hs  MathTmp.hs  RandomUtils.hs  Testing.hs
src/AI/Classification/: AlwaysTrue.hs  Boosting.hs  BoostingAlgs.hs  DecisionStump.hs  DecisionTree.hs  Ensemble.hs  KNN.hs  NaiveBayes.hs  SemiBoost.hs
src/AI/Classification/Boosting/: ASSEMBLE.hs  AdaBoost.hs  EntropyBoost.hs  LogitASSEMBLE.hs  LogitBoost.hs  MutualInformationBoost.hs  RegularizedBoost.hs
src/AI/SemiSupervised/: ASSEMBLE.hs  RegBoost.hs  RegularizedBoost.hs  SemiBoost.hs  SemiMarginBoost.hs
src/AI/Supervised/: AdaBoost.hs  DecisionStump.hs  KNN.hs  MarginBoost.hs  NaiveBayes.hs
src/examples/: example1.hs
