Name:                HMine
Version:             0.0.0.1
Description:         Data mining suite, with many supervised and semi-supervised algorithms
Category:            Data Mining
License:             GPL
License-file:        LICENSE
Author:              Mike izbicki
Maintainer:          mike@izbicki.me
Build-Type:          Simple
Cabal-Version:       >=1.2

Library
    Build-Depends:      base >= 3 && < 5, gnuplot >= 0.5, containers >= 0.4, vector, random, MonadRandom, mtl, parsec, list-extras, KdTree >= 0.2.1
    Exposed-modules:    AI.Classification,
                        AI.DataLoader,
                        AI.Testing,
                        AI.Supervised.NaiveBayes,
                        AI.Supervised.DecisionStump,
                        AI.Supervised.KNN,
                        AI.Boosting
    hs-source-dirs:     src
